--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          docker login -u itsmaheshkariya,
-          a05605ce-8f5c-4ead-96b6-4067a8b7468d
+          docker login -u itsmaheshkariya -p a05605ce-8f5c-4ead-96b6-4067a8b7468d
