--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: | 
           npm i
           docker build -t app .
-          docker login -u itsmaheshkariya -p a05605ce-8f5c-4ead-96b6-4067a8b7468d
+          docker login -u ${dev.DOCKER_USER} -p ${dev.DOCKER_SECRET}
           docker tag app itsmaheshkariya/test
           docker push itsmaheshkariya/test
           
