--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Script
         run: | 
-          echo ${{ secrets.dev.DOCKER_SECRET }}
+          npm i
+          docker build -t app .
+          docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_SECRET }}
+          docker tag app itsmaheshkariya/test
+          docker push itsmaheshkariya/test
 
           
