--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Script
         run: | 
-          echo  ${{ secrets.DOCKER_USER }} 
-          echo  ${{ secrets.DOCKER_SECRET }}
           npm i
           docker build -t app .
-          docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_SECRET }}
+          docker echo  ${{ secrets.DOCKER_SECRET }} | login -u ${{ secrets.DOCKER_USER }} --password-stdin
           docker tag app itsmaheshkariya/test
           docker push itsmaheshkariya/test
 
